--- a/package.json
+++ b/package.json
@@ -1,51 +1,28 @@
 {
-  "name": "progressus-wp",
-  "description": "Wordpress theme Progressus",
-  "version": "1.0.0",
-  "author": "Sergey Pozhilov (https://twitter.com/serggg/)",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/pozh/progerssus-wp"
-  },
-  "license": "GPL",
+  "name": "Progressus",
+  "version": "0.0.1",
+  "dependencies": {},
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/register": "^7.0.0",
-    "beepbeep": "^1.2.2",
+    "autoprefixer-core": "^6.0.1",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-minify": "^0.5.0",
+    "babel-preset-es2015-ie": "^6.7.0",
+    "babili-webpack-plugin": "^0.1.2",
     "bootstrap": "^4.1.3",
-    "browser-sync": "^2.11.1",
-    "eslint": "^5.5.0",
+    "browser-sync": "^2.26.3",
+    "cssnano": "^4.1.7",
+    "eslint": "^5.7.0",
     "eslint-config-wordpress": "^2.0.0",
     "gulp": "^4.0.0",
-    "gulp-autoprefixer": "^6.0.0",
-    "gulp-babel": "^8.0.0",
-    "gulp-cache": "^1.0.2",
-    "gulp-concat": "^2.5.2",
-    "gulp-filter": "^5.1.0",
     "gulp-imagemin": "^4.1.0",
-    "gulp-line-ending-corrector": "^1.0.1",
-    "gulp-merge-media-queries": "^0.2.1",
-    "gulp-notify": "^3.0.0",
-    "gulp-plumber": "^1.2.0",
-    "gulp-remember": "^1.0.1",
-    "gulp-rename": "^1.2.0",
-    "gulp-rtlcss": "^1.2.0",
-    "gulp-sass": "^4.0.1",
-    "gulp-sort": "^2.0.0",
-    "gulp-sourcemaps": "^2.6.2",
-    "gulp-uglify": "^3.0.0",
-    "gulp-uglifycss": "^1.0.6",
-    "gulp-wp-pot": "^2.0.7"
-  },
-  "scripts": {
-    "start": "gulp",
-    "styles": "gulp styles",
-    "stylesRTL": "gulp stylesRTL",
-    "vendorsJS": "gulp vendorsJS",
-    "customJS": "gulp customJS",
-    "images": "gulp images",
-    "clearCache": "gulp clearCache",
-    "translate": "gulp translate"
+    "gulp-jshint": "^2.1.0",
+    "gulp-postcss": "^8.0.0",
+    "gulp-sass": "^3.1.0",
+    "gulp-util": "^3.0.1",
+    "gulp-watch": "^4.3.9",
+    "popper.js": "^1.14.4",
+    "webpack": "^4.23.1",
+    "webpack-stream": "^5.1.1"
   }
 }
