--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "Progressus",
   "version": "0.0.1",
-  "dependencies": {},
+  "dependencies": {
+    "headroom.js": "^0.9.4"
+  },
   "devDependencies": {
     "autoprefixer-core": "^6.0.1",
     "babel-core": "^6.24.1",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "^7.0.0",
     "babel-minify": "^0.5.0",
     "babel-preset-es2015-ie": "^6.7.0",
@@ -21,6 +24,7 @@
     "gulp-sass": "^3.1.0",
     "gulp-util": "^3.0.1",
     "gulp-watch": "^4.3.9",
+    "jquery": "^3.3.1",
     "popper.js": "^1.14.4",
     "webpack": "^4.23.1",
     "webpack-stream": "^5.1.1"
